correct SU description and some editing

--- a/aux/commands.tex
+++ b/aux/commands.tex
@@ -85,9 +85,9 @@
 \newcommand{\mc}{\mu}
 
 %Important sets 
-\newcommand{\EC}{\mathcal{E}(n)} %essential complimentary partitions
+\newcommand{\EC}{\mathcal{E}} %essential complimentary partitions
 \newcommand{\OP}{\triangle} %ordered partitions
-\newcommand{\BT}{\mathcal{B}(n)} %bipartite trees
+\newcommand{\BT}{\mathcal{B}} %bipartite trees
 
 
 \newcommand{\0}{\color{blue}{\mathsf{0}}}
