--- a/Poissons.tex
+++ b/Poissons.tex
@@ -10,6 +10,7 @@
 \usepackage[colorlinks=true,linkcolor=red,citecolor=blue]{hyperref}
 \usepackage{color}
 \usepackage{stmaryrd}         % Crochet double barre (entiers)
+\usepackage{xargs}
 
 \input{aux/commands}
 
