--- a/sec/fvectors.tex
+++ b/sec/fvectors.tex
@@ -1,5 +1,33 @@
 % !TEX root = ../Poissons.tex
 
+\newcommandx{\arrangement}[1][1 = A]{\mathcal{#1}} % arrangement
+
+\section{Combinatorics of generically translated copies of the braid arrangement}
+\label{sec:kBraidArrangement}
+
+\subsection{Recollection on hyperplane arrangements}
+\label{subsec:arrangements}
+
+%We first briefly recall classical results on the combinatorics of affine hyperplane arrangements, in particular the enumerative connection between their intersection posets and their face lattices due to T.~Zaslavsky~\cite{Zaslavsky}.
+%
+%\begin{definition}
+%A (finite affine) \defn{hyperplane arrangement} is a finite set~$\arrangement$ of affine hyperplanes in~$\R^d$.
+%A \defn{flat} of~$\arrangement$ is a non-empty affine subspace of~$\R^d$ that can be obtained as the intersection of some hyperplanes of~$\arrangement$.
+%The \defn{intersection poset} of~$\arrangement$ is poset~$\intersectionPoset$ of flats of~$\arrangement$ ordered by reverse inclusion.
+%A \defn{region} of~$\arrangement$ is a connected component of~$\R^d \ssm \bigcup_{H \in \arrangement} H$.
+%A \defn{face} of~$\arrangement$ is the intersection of the closure of a region of~$\arrangement$ with an hyperplane of~$\arrangement$.
+%The \defn{face poset} of~$\arrangement$ is the poset~$\facePoset$ of faces of~$\arrangement$ ordered by inclusion.
+%\end{definition}
+%
+%\begin{theorem}
+%The number~$f_k(\arrangement)$ of $k$-dimensional faces of~$\arrangement$ is given by
+%\[
+%f_k(\arrangement) = \sum_{\substack{X \le Y \text{ in } \intersectionPoset \\ \dim(X) = k}} |\mu(X,Y)|.
+%\]
+%\end{theorem}
+
+%In this section, we consider the arrangement
+
 \section{Enumerative results for any diagonal} 
 \label{s:facets}
 
